--- a/project-frontend/style.css
+++ b/project-frontend/style.css
@@ -16,6 +16,8 @@ header {
   align-items: center;
   padding: 20px 10%;
   background-color: pink;
+  z-index: 2;
+  transition: height 350ms ease-in-out;
 }
 
 .logo {
@@ -100,8 +102,9 @@ header {
 }
 
 #main-page {
-  display: grid;
-  grid-template-columns: 30% 70%;
+  /* display: grid;
+  grid-template-columns: 30% 70%; */
+  transition: margin-left .5s;
 }
 
 html {
@@ -181,8 +184,19 @@ html, body {
 #stats-container {
   display: flex;
   flex-direction: column;
-  float: left;
-  width: 100%;
+  height: 100%;
+  width: 0;
+  position: fixed;
+  z-index: 3;
+  top: 0;
+  left: 0;
+  overflow-x: hidden;
+  padding-top: 110px;
+  transition: 0.5s;
+}
+
+#stats-container h4 {
+  padding-left: 10px;
 }
 
 .card-images {
