--- a/project-frontend/style.css
+++ b/project-frontend/style.css
@@ -209,7 +209,7 @@ header {
 
 .card-images {
   width: 30%;
-  margin: 4%;
+  /* margin: 4%; */
 }
 
 .card h2 {
@@ -291,7 +291,9 @@ header {
 }
 
 
-
+#answer-title {
+  padding-right: 10%;
+}
 
 
 /* @media only screen and (max-width: 1000px) {
