--- a/project-frontend/style.css
+++ b/project-frontend/style.css
@@ -109,7 +109,7 @@ header {
 .quiz-page {
   display: flex;
   flex-direction: column;
-  background-color: blue;
+  background-color: #A8D0E6;
   text-align: center;
   height: 800px;
   width: 100%;
@@ -177,8 +177,8 @@ header {
 }
 
 .flip-card-front {
-  background-color: #ccd1d8;
-  color: darkslategray;
+  background-color: #24305E;
+  color: #fcfcd9;
   border-radius: 25px;
 }
 
@@ -190,6 +190,7 @@ header {
 }
 
 #stats-container {
+  /* background-color: #374785; */
   display: flex;
   flex-direction: column;
   height: 100%;
@@ -205,6 +206,7 @@ header {
 
 #stats-container h4 {
   padding-left: 10px;
+  margin: 10px;
 }
 
 .card-images {
@@ -255,6 +257,7 @@ header {
   box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
   top: 60%;
   background-color: rgb(133, 175, 195);
+  border-radius: 25px;
 }
 
 .results button {
@@ -290,9 +293,15 @@ header {
   margin-top: 40%;
 }
 
+#answer-title {
+  padding-right: 10%;
+}
 
-
-
+.font {
+  font-family: 'Oswald', sans-serif;
+  font-weight: 200;
+  font-size: 30px;
+}
 
 /* @media only screen and (max-width: 1000px) {
   #ellis-logo {
@@ -305,3 +314,83 @@ header {
     text-align: center;
   }
 } */
+
+/* radio buttons start*/
+
+.form-radio {
+     -webkit-appearance: none;
+     -moz-appearance: none;
+     appearance: none;
+     display: flex;
+     justify-content: space-between;
+     position: relative;
+     background-color: #f1f1f1;
+     color: #666;
+     top: 10px;
+     height: 30px;
+     width: 30px;
+     border: 0;
+     border-radius: 50px;
+     cursor: pointer;
+     margin-right: 7px;
+     outline: none;
+}
+
+.form-radio:checked::before {
+     position: absolute;
+     font: 13px/1 'Open Sans', sans-serif;
+     left: 11px;
+     top: 7px;
+     content: '\02143';
+     transform: rotate(40deg);
+}
+
+.form-radio:hover {
+     background-color: #f7f7f7;
+}
+
+.form-radio:checked {
+     background-color: #f1f1f1;
+}
+
+label {
+     font: 15px/1.7 'Open Sans', sans-serif;
+     color: #fcfcd9;
+     -webkit-font-smoothing: antialiased;
+     -moz-osx-font-smoothing: grayscale;
+     cursor: pointer;
+}
+
+/* radio buttons end*/
+
+/* submit button start (card form) */
+
+input.submit-btn {
+ display:inline-block;
+ padding:0.7em 1.4em;
+ margin:0 0.3em 0.3em 0;
+ border-radius:0.15em;
+ box-sizing: border-box;
+ text-decoration:none;
+ font-family:'Roboto',sans-serif;
+ text-transform:uppercase;
+ font-weight:400;
+ color:#FFFFFF;
+ background-color:#3369ff;
+ box-shadow:inset 0 -0.6em 0 -0.35em rgba(0,0,0,0.17);
+ text-align:center;
+ position:relative;
+}
+
+input.submit-btn:active{
+ top:0.1em;
+}
+
+@media all and (max-width:30em) {
+ input.submit-btn {
+  display:block;
+  margin:0.4em auto;
+ }
+}
+
+/* submit button end (card form) */
