--- a/project-frontend/style.css
+++ b/project-frontend/style.css
@@ -20,6 +20,14 @@ li, a, .logout {
   text-decoration: none;
 }
 
+#list-left {
+  margin: 0px 300px 0px 0px;
+}
+
+#list-right {
+  margin: 0px 0px 0px 300px;
+}
+
 header {
   position: fixed;
   width: 80%;
@@ -29,7 +37,7 @@ header {
   padding: 20px 10%;
   background-color: pink;
   height: 60px;
-  z-index: 2;
+  z-index: 4;
   transition: height 350ms ease-in-out;
 }
 
@@ -120,7 +128,7 @@ header {
 #main-page {
   /* display: grid;
   grid-template-columns: 30% 70%; */
-  transition: margin-left .5s;
+  transition: margin-left .5s, margin-right .5s;
 }
 
 
@@ -190,7 +198,7 @@ header {
 }
 
 #stats-container {
-  /* background-color: #374785; */
+  background-color: #374785;
   display: flex;
   flex-direction: column;
   height: 100%;
@@ -207,6 +215,24 @@ header {
 #stats-container h4 {
   padding-left: 10px;
   margin: 10px;
+}
+
+#about-container {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  width: 0;
+  position: fixed;
+  z-index: 3;
+  top: 0;
+  right: 0;
+  overflow-x: hidden;
+  padding-top: 110px;
+  transition: 0.5s;
+}
+
+#about-content {
+  padding-left: 10px;
 }
 
 .card-images {
@@ -359,6 +385,15 @@ label {
      -webkit-font-smoothing: antialiased;
      -moz-osx-font-smoothing: grayscale;
      cursor: pointer;
+}
+
+.radio-size {
+  font-size: 15px;
+}
+
+.radio-btn {
+  display: flex;
+  flex-direction: row;
 }
 
 /* radio buttons end*/
