--- a/project-frontend/style.css
+++ b/project-frontend/style.css
@@ -188,6 +188,7 @@ header {
   background-color: #24305E;
   color: #fcfcd9;
   border-radius: 25px;
+  padding: 10px;
 }
 
 .flip-card-back {
@@ -236,16 +237,17 @@ header {
 }
 
 .card-images {
+  top: 5px;
   width: 30%;
   /* margin: 4%; */
 }
 
 .card h2 {
-  margin: 3%;
+  margin: 1px;
 }
 
 .card h4{
-  margin: 3%;
+  margin: 1px;
 }
 
 .flip-card-back h4 {
@@ -353,8 +355,8 @@ header {
      background-color: #f1f1f1;
      color: #666;
      top: 10px;
-     height: 30px;
-     width: 30px;
+     min-height: 30px;
+     min-width: 30px;
      border: 0;
      border-radius: 50px;
      cursor: pointer;
@@ -388,44 +390,34 @@ label {
 }
 
 .radio-size {
-  font-size: 15px;
+  font-size: 17px;
 }
 
 .radio-btn {
   display: flex;
   flex-direction: row;
+  align-items: baseline;
+  width: 65%;
 }
 
 /* radio buttons end*/
 
 /* submit button start (card form) */
 
-input.submit-btn {
- display:inline-block;
- padding:0.7em 1.4em;
- margin:0 0.3em 0.3em 0;
- border-radius:0.15em;
- box-sizing: border-box;
- text-decoration:none;
- font-family:'Roboto',sans-serif;
- text-transform:uppercase;
- font-weight:400;
- color:#FFFFFF;
- background-color:#3369ff;
- box-shadow:inset 0 -0.6em 0 -0.35em rgba(0,0,0,0.17);
- text-align:center;
- position:relative;
-}
-
-input.submit-btn:active{
- top:0.1em;
-}
-
-@media all and (max-width:30em) {
- input.submit-btn {
-  display:block;
-  margin:0.4em auto;
- }
+#submit-btn {
+  background-color: #fcfcd9; /* Green */
+  border: none;
+  color: black;
+  padding: 16px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin-top: 10px;
+  -webkit-transition-duration: 0.4s; /* Safari */
+  transition-duration: 0.4s;
+  cursor: pointer;
+  border-radius: 25px;
 }
 
 /* submit button end (card form) */
