--- a/project-frontend/style.css
+++ b/project-frontend/style.css
@@ -12,7 +12,7 @@ html, body {
 }
 
 /* nav bar styling */
-li, a, .logout {
+header li, a, .logout {
   font-family: 'Oswald', sans-serif;
   font-weight: 500;
   font-size: 25px;
@@ -385,6 +385,146 @@ input.submit-btn {
 input.submit-btn:active{
  top:0.1em;
 }
+
+#learn-more{
+  float: right;
+  margin-top: -99px;
+  margin-right: 30px;
+  border-radius: 100%;
+  height: 85px;
+  width: 85px;
+  font-size: 19px;
+  background: #f76c6c;
+  font-family: 'Oswald', sans-serif;
+  color: white;
+}
+
+#learn-more:hover {
+  opacity: 0.5;
+}
+
+#en {
+  display: none;
+  height: 100%;
+  background: #24305E;
+  padding: 1px;
+}
+
+#es {
+  display: none;
+  height: 100%;
+  background: #24305E;
+  padding: 1px;
+}
+
+#ch {
+  display: none;
+  height: 100%;
+  background: #24305E;
+  padding: 1px;
+}
+
+.naturalization-info{
+  display: flex;
+  flex-direction: column;
+  margin: 90px 30px 10px 30px;
+  color: white
+}
+
+/* .naturalization-info ul {
+  list-style-image: url(images/flag.png)
+} */
+
+.naturalization-info li {
+  /* display: flex; */
+      max-width: 86%;
+}
+
+.eligibility, .application, .fingerprints, .interview {
+  width: 44%;
+display: flex;
+flex-direction: column;
+border: solid;
+margin: 8px;
+padding: 1px;
+border-color: white;
+border-width: thin;
+box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+background: #8d8da5;
+}
+
+.info-title {
+  display: flex;
+  justify-content: space-around;
+
+}
+
+.info-title-main {
+  display: flex;
+}
+.info-title button{
+  margin: 16px;
+  width: 50px;
+  border-radius: 15%;
+  font-size: 15px;
+  background: #f76c6c;
+  font-family: sans-serif;
+  color: white;
+  border-style: outset;
+}
+
+.info-title img {
+  width: 8%
+}
+.language-buttons {
+  display: flex;
+}
+
+.info-list {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+.info-list h4{
+  text-align: center;
+  /* font-family: 'Oswald';
+  font-size: 18px; */
+}
+
+.useful-links {
+  display: flex;
+  justify-content: center;
+  width: 100%;
+  margin-top: 1%;
+}
+
+.useful-buttons {
+  display: flex;
+  margin-left: 5%;
+
+}
+
+.useful-links button {
+  margin: 10px;
+  height: 45px;
+  font-size: 18px;
+  background: #f76c6c;
+  font-family: sans-serif;
+  color: white;
+  border-style: outset;
+  border-radius: 10px;
+}
+
+.references button:hover {
+  opacity: 0.5;
+}
+
+.references {
+  transition: all 0.3s ease 0s;
+  height: 1000px;
+}
+
 
 @media all and (max-width:30em) {
  input.submit-btn {
