--- a/project-frontend/style.css
+++ b/project-frontend/style.css
@@ -130,6 +130,7 @@ nav {
   text-align: center;
   height: 800px;
   width: 100%;
+  align-items: center;
   /* padding-top: 25%; */
   /* float: left; */
 }
@@ -143,7 +144,7 @@ nav {
 
 .selections {
   width: 100%;
-  margin: 5% 0% 5% 15%;
+  margin: 3%;
   font-size: 20px;
   height: 40px;
   border-radius: 25px;
@@ -158,12 +159,13 @@ nav {
 
 #card-container{
   background-color: transparent;
-  height: 300px;
+  height: 100%;
   position: relative;
-  top: 5%;
-  left: 27%;
-  bottom: 40%;
-  width: 500px;
+  width: 50%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
   /* perspective: 1000px; */
   /* margin-left: 15%;
   margin-top: 35%; */
@@ -172,13 +174,13 @@ nav {
 .card {
   display: flex;
   position: relative;
-  width: 130%;
-  height: 170%;
+  width: 110%;
+  height: 70%;
   text-align: center;
   transition: transform 0.6s;
   transform-style: preserve-3d;
   box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-  top: 60%;
+  top: 15%;
   border-radius: 25px;
 }
 
@@ -269,7 +271,6 @@ nav {
 .card-images {
   top: 5px;
   width: 30%;
-  margin-top: 10px;
   /* margin: 4%; */
 }
 
@@ -312,10 +313,10 @@ nav {
   flex-direction: column;
   position: relative;
   width: 130%;
-  height: 170%;
+  height: 70%;
   text-align: center;
   box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-  top: 60%;
+  top: 15%;
   background-color: rgb(133, 175, 195);
   border-radius: 25px;
 }
@@ -343,18 +344,15 @@ nav {
 }
 
 #card-container h4 {
-  display: block;
-  margin-left: 150px;
   font-size: 20px;
 
 }
 
 #select-title-top {
-  margin-top: 40%;
+  padding-top: 10%;
 }
 
 #answer-title {
-  padding-right: 10%;
   font-family: 'Oswald',sans-serif;
   font-size: 25px;
 }
@@ -440,7 +438,7 @@ label {
 
 #learn-more{
   float: right;
-  margin-top: -99px;
+  margin-top: -176px;
   margin-right: 30px;
   border-radius: 100%;
   height: 85px;
